@@ -14,11 +14,12 @@ import com.starbucks.starvive.product.dto.out.ProductResponseDto;
 import com.starbucks.starvive.product.infrastructure.ProductOptionRepository;
 import com.starbucks.starvive.product.infrastructure.ProductRepository;
 import lombok.RequiredArgsConstructor;
+import org.springframework.data.domain.PageRequest;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
+import org.springframework.data.domain.Pageable;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 import static com.starbucks.starvive.common.domain.BaseResponseStatus.*;
 
 @Service
@@ -60,18 +61,19 @@ public class ProductServiceImpl implements ProductService {
 
     @Transactional(readOnly = true)
     @Override
-    public List<ProductListResponseDto> getAllProducts() {
-        return productRepository.findAll().stream()
+    public List<ProductListResponseDto> getProductsByCursor(UUID lastProductId, int size) {
+        Pageable pageable = PageRequest.of(0, size);
+        List<Product> products = (lastProductId == null)
+                ? productRepository.findAllByOrderByProductIdDesc(pageable)
+                : productRepository.findByProductIdLessThanOrderByProductIdDesc(lastProductId, pageable);
+
+        return products.stream()
                 .map(product -> {
-                    ProductOption option = productOptionRepository.findFirstByProductId(product.getProductId())
-                            .orElseThrow(() -> new BaseException(NO_EXIST_OPTION));
-
-                    ProductImage image = productImageRepository.findFirstByProductId(product.getProductId())
-                            .orElseThrow(() -> new BaseException(NO_EXIST_IMAGE));
-
+                    ProductOption option = productOptionRepository.findFirstByProductId(product.getProductId()).orElse(null);
+                    ProductImage image = productImageRepository.findFirstByProductId(product.getProductId()).orElseThrow(() -> new BaseException(NO_EXIST_IMAGE));
                     return ProductListResponseDto.from(product, option, image);
                 })
-                .collect(Collectors.toList());
+                .toList();
     }
 
         @Override
